--- a/template/index.html
+++ b/template/index.html
@@ -1,4 +1,5 @@
 {% extends 'headerPage.html' %}
+{% load static %}
 
 {% block content%}
 
@@ -12,25 +13,80 @@
  {% csrf_token %}
  <!-- <div class="col-md-4 col-sm-4"><label for="fname">Please Upload Your data:</label> </div> <input name="filePath" type="file"><br><br>-->
  <br>
- <div class="row">
-    <div class="col-6 px-4">
-       <p class="h5 px-4 mx-4">
-          Drop your image below so we can recommend you the best of all products.
-       </p>
-       <div class="mb-3 px-4">
-          <label for="formFile" class="form-label"></label>
-          <input class="form-control" type="file" id="inputFile" name="filePath">
-          <h5 class="mb-3 p-4">This Classified Image is  {{predictedLabel}} </h5>
-       </div>
-    </div>
-    <div class="col-6 px-4">
-      <div class="image-preview" id="imagePreview">
-         <img src="" alt="Image Preview" class="image-preview__image">
-         <span class="image-preview__default-text">Image Preview</span>
+ <div class="container rounded-top"  style="background-color: #8d676771;">
+  <div class="row">
+      <div class="col-md-6 p-4">
+          <div class="rounded p-4 mb-3"">
+            <p class="h5 text-white font-weight-bold p-3  " style="background-color: rgb(241, 176, 176); font-weight: 800;">
+              Drop your image below so we can recommend you the best of all products.
+            </p>
+            
+            
+              <div class="mb-3">
+                
+                  <input type="file" id="inputFile" name="filePath" onchange="toggleSubmitButtonVisibility(event)" class="custom-file-input border-0 invisible">
+                  <div class="input-group-append">
+                    <label for="inputFile" class="btn btn-light rounded-pill px-4 py-2">
+                      <small class="text-uppercase font-weight-bold text-muted float-end ">Upload your Image</small>
+                      
+                    </label>
+                    
+                  </div>
+                
+                
+              
+              
+              
+              
+                  {% if predictedLabel %}
+                    <h5 class="mt-3">This Classified Image is {{predictedLabel}}</h5>
+                  {% endif %}
+              </div>
+          </div>
       </div>
-      <button type="submit" class="btn btn-dark" id="btn-hide">SUBMIT</button>
-   </div>  
- </div> 
+      <div class="col-md-6 p-4 text-center">
+        <div class="card text-center">
+          <div class="card-body text-center"> <!-- Removed classes 'd-flex' and 'align-items-start', added 'text-center' -->
+            <div class="image-preview" id="imagePreview" style="width: 565px; height: 150px; overflow: hidden;">
+              <img src="" alt="Image Preview" class="image-preview__image" style="object-fit: contain; width: 100%; height: 100%;">
+              <span class="image-preview__default-text">Image Preview</span>
+            </div>
+            <button type="submit" class="btn btn-light rounded-pill align-content-lg-center " style="width: 565px; overflow: hidden;" id="btn-hide">SUBMIT</button>
+          </div>
+        </div>
+      </div>
+      
+      
+      
+    
+    
+  </div>
+</div>
+
+<script>
+  function toggleSubmitButtonVisibility(event) {
+      var inputFile = event.target;
+      var submitButton = document.getElementById("btn-hide");
+
+      if (inputFile.files && inputFile.files[0]) {
+          submitButton.style.visibility = "visible";
+      } else {
+          submitButton.style.visibility = "hidden";
+      }
+  }
+
+  
+</script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+
+
+
+
+
+
+
+
  
  <!--<input type="submit" value="Submit" ></div>-->
 
