--- a/template/headerPage.html
+++ b/template/headerPage.html
@@ -51,19 +51,14 @@
                                    <div class="d-flex justify-content-center mt-4">
                                         <p class="h4">Take Care Of Your Skin</p>
                                    </div>
-                                   <div class="d-flex justify-content-center">
-                                        <p class="h6 p-4 mx-4">
+                                   <div>
+                                        <p class="h6 p-3 mx-4 " style="text-align: justify;">
 
-                                             Welcome to our cutting-edge CAD (computer-aided diagnosis) system! We are
-                                             thrilled to introduce our beta version, specifically designed for Asian
-                                             skin, providing personalized recommendations for your unique skin
-                                             condition. As we continue to improve and expand our system, we aim to cover
-                                             all skin tones and incorporate a wide range of dermatological diseases. We
-                                             strongly recommend consulting with our expert alongside utilizing our
-                                             recommendations for optimal results. Together, our CAD system and expert
-                                             guidance will empower you to make informed decisions and achieve healthier,
-                                             more radiant skin. Thank you for choosing our CAD system, and we look
-                                             forward to accompanying you on your skincare journey.
+                                             Discover our cutting-edge CAD system for Asian skin, offering personalized
+                                             recommendations for your unique needs. With ongoing improvements and an
+                                             expanding range of dermatological conditions, our goal is to empower you to
+                                             achieve healthier, radiant skin. Consult our expert for optimal results.
+                                             Choose our CAD system and embark on your skincare journey today.
                                         </p>
                                    </div>
                               </div>
