--- a/template/index.html
+++ b/template/index.html
@@ -9,25 +9,28 @@
     <br>
    
     <form method="post" enctype="multipart/form-data" action="predictImage">
+   
   
  {% csrf_token %}
  <!-- <div class="col-md-4 col-sm-4"><label for="fname">Please Upload Your data:</label> </div> <input name="filePath" type="file"><br><br>-->
- <br>
- <div class="container rounded-pill"  style="background-color: #8d676771;">
+ 
+ <div class="container rounded-pill  style="background-color: #fffafa18;">
   <div class="row">
-      <div class="col-md-6 p-4">
+      <div class="col-md-6 p-4  ">
           <div class="rounded p-4 mb-3"">
-            <p class="h5 text-white font-weight-bold p-3  " style="background-color: rgb(241, 176, 176); font-weight: 800;">
-              Drop your image below so we can recommend you the best of all products.
-            </p>
+            <div>
+              <p class="h5 text-black-50 font-weight-bold p-3 " ">
+                Drop your image below so we can recommend you the best of all products.
+              </p>
+            </div>
             
             
               <div class="mb-3">
                 
                   <input type="file" id="inputFile" name="filePath" onchange="toggleSubmitButtonVisibility(event)" class="custom-file-input border-0 invisible">
-                  <div class="input-group-append">
+                  <div class="input-group-append p-3 ">
                     <label for="inputFile" class="btn btn-light rounded-pill px-4 py-2">
-                      <small class="text-uppercase font-weight-bold text-muted float-end ">Upload your Image</small>
+                      <small class="text-uppercase font-weight-bold text-muted float-end  ">Upload your Image</small>
                       
                     </label>
                     
@@ -37,10 +40,11 @@
               
               
               
-              
-                  {% if predictedLabel %}
-                    <h5 class="mt-3">This Classified Image is {{predictedLabel}}</h5>
-                  {% endif %}
+                    <div class="p-3">
+                      {% if predictedLabel %}
+                        <h5 class="mt-3">This Classified Image is {{predictedLabel}}</h5>
+                      {% endif %}
+                  </div>
               </div>
           </div>
       </div>
@@ -57,14 +61,19 @@
         </div>
         
       </div>
-      <button type="submit" class="btn btn-light rounded-pill align-content-lg-center align-items-center" style="width: 565px; overflow: hidden;" id="btn-hide">SUBMIT</button>
+      
       
       
       
     
     
   </div>
+  <div class="d-flex justify-content-center">
+    <button type="submit" class="btn btn-light rounded-pill  justify-content-center" style="width: 565px; overflow: hidden;" id="btn-hide">SUBMIT</button>
+  </div>
+  
 </div>
+
 
 <script>
   function toggleSubmitButtonVisibility(event) {
